@@ -1,3 +1,8 @@
+2007-05-11  Brady Anderson <banderso@novell.com> 
+
+	* Banter/Account.cs: refactor code to match the changes in
+	  ProviderUserManager
+
 2007-05-10  Calvin Gaisford <calvinrg@gmail.com> 
 
 	* Banter/Person.cs: Added ProviderUsers to Person and code to update
